<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom|withText"/>


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom|withText"/>


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_person"
        android:title="@string/find_friend"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/add_friend"
        android:icon="@drawable/ic_friend_request"
        android:title="@string/friend_request"
        app:showAsAction="ifRoom|withText"/>



</menu>
