<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.salman.firebasefindfriends.findfriends.ui.Friend_info">


    <ImageView
        android:id="@+id/user_cover_profile_friend_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/user_profile_pic"
        android:scaleType="fitStart"
        android:src="@mipmap/cat"
        android:visibility="visible"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_circle_profile_picture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignBottom="@+id/friend_info_card_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="267dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:elevation="25dp"
        android:src="@drawable/salman"
        android:visibility="visible"
        tools:targetApi="lollipop"/>


    <android.support.v7.widget.CardView
        android:id="@+id/friend_info_card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="5dp"
        app:cardElevation="@dimen/small_margin">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/friend_info_card_view"
            android:layout_marginTop="48dp">

            <TextView
                android:id="@+id/user_name_profile_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/muhammad_salman_zafar"
                android:textColor="@color/md_black_1000"
                android:textSize="25sp"
                tools:targetApi="jelly_bean"/>


            <ImageView
                android:id="@+id/ic_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/user_name_profile_info"
                android:layout_alignStart="@+id/user_name_profile_info"
                android:layout_below="@+id/user_name_profile_info"
                android:layout_marginTop="@dimen/small_margin"
                android:contentDescription="@string/link"
                app:srcCompat="@drawable/ic_link"/>


            <TextView
                android:id="@+id/user_occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ic_link"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/ic_link"
                android:layout_toRightOf="@+id/ic_link"
                android:text="@string/android_developer"
                android:textColor="#333"
                android:textSize="15sp"/>


            <ImageView
                android:id="@+id/ic_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ic_link"
                android:layout_alignStart="@+id/ic_link"
                android:layout_below="@+id/ic_link"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/location"
                app:srcCompat="@drawable/ic_location"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/user_occupation"
                android:layout_alignStart="@+id/user_occupation"
                android:layout_alignTop="@+id/ic_location"
                android:text="@string/rawalpindi_pakistan"
                android:textColor="#333"
                android:textSize="15sp"/>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/add_friend_info_btn"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/md_blue_500"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/add_friend"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000"
                tools:targetApi="lollipop"/>


            <ImageView
                android:id="@+id/ic_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/ic_location"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/views"
                app:srcCompat="@drawable/ic_view"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ic_view"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/ic_view"
                android:layout_toRightOf="@+id/ic_view"
                android:fontFamily="sans-serif-light"
                android:text="@string/views"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                tools:targetApi="jelly_bean"/>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="624"
                android:textColor="@color/md_black_1000"
                android:textSize="25sp"
                tools:ignore="HardcodedText"
                android:layout_below="@+id/textView3"
                android:layout_alignLeft="@+id/ic_view"
                android:layout_alignStart="@+id/ic_view"/>


            <ImageView
                android:id="@+id/ic_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView3"
                android:layout_centerInParent="true"
                android:contentDescription="@string/user_profile_pic"
                app:srcCompat="@drawable/ic_people"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ic_friends"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/ic_friends"
                android:layout_toRightOf="@+id/ic_friends"
                android:text="friends"
                android:textSize="10sp"
                tools:ignore="HardcodedText,SmallSp"/>


            <TextView
                android:id="@+id/friends_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textColor="@color/md_black_1000"
                android:textSize="25sp"
                tools:ignore="HardcodedText"
                android:layout_alignBaseline="@+id/textView4"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignRight="@+id/textView5"
                android:layout_alignEnd="@+id/textView5"/>


            <ImageView
                android:id="@+id/ic_love"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView5"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                app:srcCompat="@drawable/ic_favorite"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/ic_love"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="5dp"
                android:text="likes"
                android:textSize="10sp"
                tools:ignore="HardcodedText,SmallSp"/>


            <TextView
                android:id="@+id/friends_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="550"
                android:textColor="@color/md_black_1000"
                android:textSize="25sp"
                tools:ignore="HardcodedText"
                android:layout_alignBaseline="@+id/friends_number"
                android:layout_alignBottom="@+id/friends_number"
                android:layout_alignLeft="@+id/ic_love"
                android:layout_alignStart="@+id/ic_love"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <ProgressBar
        android:visibility="gone"
        android:id="@+id/find_friend_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>